--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "cdbreact": "^1.5.4",
     "react": "^17.0.2",
+    "react-bootstrap-sidebar-menu": "^2.0.3",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
+    "react-pro-sidebar": "^0.5.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recharts": "^2.1.9",
