--- a/package.json
+++ b/package.json
@@ -15,16 +15,18 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.4",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.0",
     "react-bootstrap-sidebar-menu": "^2.0.3",
-    "react-circular-progressbar": "^2.0.4",
+    "react-bootstrap-table2-overlay": "^2.0.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.7.1",
     "react-pro-sidebar": "^0.5.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.9",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
   },
