--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.4.4",
+    "@mui/lab": "^5.0.0-alpha.114",
     "@mui/material": "^5.4.4",
     "@mui/x-data-grid": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
