--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "cdbreact": "^1.5.4",
     "draft-js": "^0.10.5",
